Video 13 - Google Sign In Android & web

--- a/task_management_app/web/index.html
+++ b/task_management_app/web/index.html
@@ -38,6 +38,7 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <meta name="google-signin-client_id" content="559967414499-h51car8jjdcdspi3l3r49b9u4v5s6k89.apps.googleusercontent.com">
 </head>
 <body>
   
@@ -46,8 +47,9 @@
   <script type="module">
     
     // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-analytics.js";
+    // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
     // TODO: Add SDKs for Firebase products that you want to use
     // https://firebase.google.com/docs/web/setup#available-libraries
 
